--- a/_config.yml
+++ b/_config.yml
@@ -285,7 +285,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
