--- a/_config.yml
+++ b/_config.yml
@@ -288,8 +288,8 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
-      read_time: true
-      comments: # true
-      share: true
-      related: true
+      # author_profile: true
+      # read_time: true
+      # comments: # true
+      # share: true
+      # related: true
