--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,4 +15,4 @@ main:
     - title: "Experience"
       url: /projects/
     - title: "Publications"
-      url: pages/publications/
+      url: _pages/publications/
