--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
     - title: "Projects"
-      url: /projects/
+      url: _pages/projects/
     - title: "Experience"
       url: /projects/
     - title: "Publications"
