--- a/_config.yml
+++ b/_config.yml
@@ -280,19 +280,18 @@ compress_html:
     envs: development
 
 
-# Defaults
 defaults:
   # _posts
   - scope:
       path: ""
-      type: pages
+      type: posts
     values:
       layout: single
-      # author_profile: true
-      # read_time: true
-      # comments: # true
-      # share: true
-      # related: true
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
 
 defaults:
   # _pages
