--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   #   url: /sitemap/
     - title: "Projects"
       url: _pages/projects/
-    - title: "Experience"
-      url: _pages/experience/
+    - title: "Education"
+      url: _pages/education/
     - title: "Publications"
       url: _pages/publications/
