--- a/_config.yml
+++ b/_config.yml
@@ -301,3 +301,17 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+gallery:
+  - url: /assets/images/uphos.JPG
+    image_path: /assets/images/uphos.JPG
+    alt: "placeholder image 1"
+    title: "Image 1 title caption"
+  - url: /assets/images/uphos.JPG
+    image_path: /assets/images/uphos.JPG
+    alt: "placeholder image 2"
+    title: "Image 2 title caption"
+  - url: /assets/images/uphos.JPG
+    image_path: /assets/images/uphos.JPG
+    alt: "placeholder image 3"
+    title: "Image 3 title caption"
