--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Federico Celi"
   avatar           : "/assets/images/profilo.jpg"
-  bio              : "Ph.D. Student in Mechanical Engineer at the University of California, Riverside"
+  bio              : "Ph.D. Student in Mechanical Engineering at the University of California, Riverside"
   location         : "Riverside, CA, USA"
   email            :
   links:
