--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : XcdjPrhoC43WB0bIgzuKUuv50os5pFSVE_gcZlUzNVg
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
