--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Federico Celi"
 title_separator          : "-"
 name                     : "Federico Celi"
 description              : "Federico Celi homepage UCR Univeristy of California Riverside Pisa UNIPI"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://federicoceli.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
