--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
-    - title: "Projects"
-      url: _pages/projects/
+    - title: "Research"
+      url: _pages/research/
     - title: "Education"
       url: _pages/education/
     - title: "Publications"
